@@ -4,6 +4,7 @@ import com.relatos_papel.catalogue.application.book.common.BookDto;
 import com.relatos_papel.catalogue.common.mediator.RequestHandler;
 import com.relatos_papel.catalogue.domain.model.Book;
 import com.relatos_papel.catalogue.infrastructure.repositories.BookRepository;
+import jakarta.persistence.criteria.JoinType;
 import jakarta.persistence.criteria.Predicate;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.jpa.domain.Specification;
@@ -11,7 +12,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -21,8 +21,10 @@ public class SearchBooksQueryHandler implements RequestHandler<SearchBooksQuery,
 
     @Override
     public List<BookDto> handle(SearchBooksQuery request) {
-        // Especificación dinámica para Spring Data JPA
         Specification<Book> spec = (root, query, cb) -> {
+            root.fetch("genre", JoinType.LEFT);
+            query.distinct(true);
+
             List<Predicate> predicates = new ArrayList<>();
 
             // Si visible (visible=true) se especifica, filtrar por isAvailable
@@ -31,40 +33,47 @@ public class SearchBooksQueryHandler implements RequestHandler<SearchBooksQuery,
             if (request.getVisible() != null) {
                 predicates.add(cb.equal(root.get("isAvailable"), request.getVisible()));
             } else {
-                // REGLA DE NEGOCIO por defecto: Nunca devolver libros ocultos
                 predicates.add(cb.isTrue(root.get("isAvailable")));
             }
 
-            if (request.getTitle() != null)
+            if (request.getTitle() != null) {
                 predicates.add(cb.like(cb.lower(root.get("title")), "%" + request.getTitle().toLowerCase() + "%"));
+            }
 
-            if (request.getAuthor() != null)
+            if (request.getAuthor() != null) {
                 predicates.add(cb.like(cb.lower(root.get("author")), "%" + request.getAuthor().toLowerCase() + "%"));
+            }
 
-            if (request.getIsbn() != null)
+            if (request.getIsbn() != null) {
                 predicates.add(cb.equal(root.get("isbn"), request.getIsbn()));
+            }
 
-            if (request.getPopularity() != null)
+            if (request.getPopularity() != null) {
                 predicates.add(cb.equal(root.get("popularity"), request.getPopularity()));
+            }
 
-            if (request.getPublicationDate() != null)
+            if (request.getPublicationDate() != null) {
                 predicates.add(cb.equal(root.get("publicationDate"), request.getPublicationDate()));
+            }
 
-            if (request.getRating() != null)
+            if (request.getRating() != null) {
                 predicates.add(cb.equal(root.get("popularity"), request.getRating())); // Usar popularity como rating
+            }
 
             if (request.getCategory() != null) {
-                // Join con la tabla Genre para buscar por genreId
                 predicates.add(cb.equal(root.get("genre").get("genreId"), request.getCategory()));
+            }
+
+            if (request.getCategoryName() != null) {
+                predicates.add(cb.like(cb.lower(root.get("genre").get("name")), "%" + request.getCategoryName().toLowerCase() + "%"));
             }
 
             return cb.and(predicates.toArray(new Predicate[0]));
         };
 
-        // Ejecutar búsqueda y mapear a DTO
         return bookRepository.findAll(spec).stream()
                 .map(BookDto::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
